--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-
+    
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/colaPrioridad.js" defer></script>
     <script src="js/Juego.js" defer></script>
     <script src="js/main.js" defer></script>
 
-    <title>Document</title>
+    <title>A* - 8 Puzzle </title>
 </head>
 
 <body>
+    <h2 class="tituloPruebaHayQueBorrarlo">Tabla Puzzle</h2> 
+    <table id="table_Puzzle" style="color: rgb(255, 255, 255);">
+    </table>
 
+    <h2 class="tituloPruebaHayQueBorrarlo">Solución</h2>
+    <table id="table_PuzzleSolucion" style="color: rgb(255, 255, 255);">
+    </table>
+
+    <button type="button" id="runButton" onclick="ejecutar()">Solucion</button>
 </body>
 
 </html>
