Cambios en Css para que se viera bien

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <table id="table_PuzzleSolucion" style="color: rgb(255, 255, 255);">
     </table>
 
-    <button type="button" id="runButton" onclick="ejecutar()">Solucion</button>
+    <button type="button" id="runButton" onclick="ejecutarJuego()">Solucion</button>
 </body>
 
 </html>
