Cambia algoritmo, desabilita boton solucion
Cambia colores cuando cambia de algoritmo, así como un <h3> con el titulo del algoritmo. El botón solucion se desabilita mientras se está mostrando la solución

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <title>A* - 8 Puzzle </title>
 </head>
 
-<body>
+<body class="bodyA">
     
     <h2 class="tituloPruebaHayQueBorrarlo">Tabla Puzzle</h2> 
+    <h3 id="alg_Name" class="tituloPruebaHayQueBorrarlo">Algoritmo A*</h2> 
     <table id="table_Puzzle" style="color: rgb(255, 0, 0);">
     </table>
 
     <button type="button" id="runButton" onclick="ejecutarJuego()">Solucion</button>
+    <button type="button" id="cambiarAlgoritmo" onclick="changeAlgorithm()">Cambiar Algoritmo</button>
 </body>
 
 </html>
