--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <table id="table_Puzzle" style="color: rgb(255, 0, 0);">
     </table>
 
-    <button type="button" id="runButton" onclick="ejecutarJuego()">Solucion</button>
-    <button type="button" id="cambiarAlgoritmo" onclick="changeAlgorithm()">Cambiar Algoritmo</button>
+    <button type="button" id="run_Button" onclick="runSolution()">Solucion</button>
+    <button type="button" id="changeAlg_Button" onclick="changeAlgorithm()">Cambiar Algoritmo</button>
+    <button type="button" id="nextStep_Button" onclick="nextStep()">Siguiente Paso</button>
 </body>
 
 </html>
