--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
                 <h2 class="titulo_tablero">Tabla Puzzle</h2> 
                 <h3 id="alg_Name" class="titulo_tablero">Algoritmo A*</h2> 
-                <table id="table_Puzzle" class="table enableTable "></table>
+                    <div class="transparentFilm">
+                        <table id="table_Puzzle" class="enableTable table ">
+                    </table>
                    
             </div>
     
