Ya no evalua cuando se hacen cambios en la tabla

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button class="boton_controles" type="button" id="changeAlg_Button" onclick="changeAlgorithm()">Cambiar Algoritmo</button>
                 <button class="boton_controles" type="button" id="nextStep_Button" onclick="nextStep()">Siguiente Paso</button>
                 <button class="boton_controles" type="button" id="reset_Button" onclick="resetAll()">Reset</button>
-                <button class="boton_controles" type="button" id"changeWBlank_Button" onclick="changeWBlanck()">Intercambiar</button>    
+                <button class="boton_controles" type="button" id="changeWBlank_Button" onclick="changeWBlanck()">Intercambiar</button>    
                 
                 <input class="input_controles"  type="number" id="changeWBlank_Input" placeholder="Intercambiar Con Pieza Vacía" pattern="[1-8]{1}">
     
