Name of the file changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/colaPrioridad.js" defer></script>
         <script src="js/Juego.js" defer></script>
-        <script src="js/main.js" defer></script>
+        <script src="js/index.js" defer></script>
 
         <title>A* - 8 Puzzle </title>
     </head>
