--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </head>
 
     <body>
-        <div id="stars"></div>
+        <!-- <div id="stars"></div>
         <div id="stars2"></div>
-        <div id="stars3"></div>
+        <div id="stars3"></div> -->
         <div class="container_1">
             <div class="box_tablero bodyA" id="tablero">
                 <h2 class="titulo_tablero">8-Puzzle</h2>
