--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </head>
 
     <body>
-        <!-- <div id="stars"></div>
+        <div id="stars"></div>
         <div id="stars2"></div>
-        <div id="stars3"></div> -->
+        <div id="stars3"></div>
         <div class="container_1">
             <div class="box_tablero bodyA" id="tablero">
                 <h2 class="titulo_tablero">8-Puzzle</h2>
@@ -32,10 +32,10 @@
                 <button class="boton_controles" type="button" id="changeWBlank_Button" onclick="changeWBlanck()">Intercambiar</button>
                 <input class="input_controles"  type="number" id="changeWBlank_Input" placeholder="n° pieza" pattern="[1-8]{1}">
             </div>
+            <a href="https://github.com/hros19/Automatized_8-Puzzle-Game">
+                <img alt="Github Repo" src="https://raw.githubusercontent.com/hros19/images/main/icons8-github-256.svg"
+                width="85" height="85">
+            </a>
         </div>
     </body>
-    <a href="https://github.com/hros19/Automatized_8-Puzzle-Game">
-        <img alt="Github Repo" src="https://raw.githubusercontent.com/hros19/images/main/icons8-github-256.svg"
-        width="85" height="85">
-    </a>
 </html>
