--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container_1">
             <div class="box_tablero bodyA" id="tablero">
                 <h2 class="titulo_tablero">8-Puzzle</h2>
-                <h3 id="alg_Name" class="subtitulo_tablero">Algoritmo A*</h3>
+                <h3 id="alg_Name" class="subtitulo_tablero">A estrella</h3>
                 <table id="table_Puzzle" class="table"></table>
             </div>
             <div class="box_controles">
