Fixing some spanglish stuff

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                 <table id="table_Puzzle" class="table"></table>
             </div>
             <div class="box_controles">
-                <button class="boton_controles" type="button" id="run_Button" onclick="runSolution()">Solucion</button>
-                <button class="boton_controles" type="button" id="changeAlg_Button" onclick="changeAlgorithm()">Cambiar Algoritmo</button>
-                <button class="boton_controles" type="button" id="nextStep_Button" onclick="nextStep()">Siguiente Paso</button>
+                <button class="boton_controles" type="button" id="run_Button" onclick="runSolution()">Solution</button>
+                <button class="boton_controles" type="button" id="shuffle_Button" onclick="shuffle()">Shuffle</button>
+                <button class="boton_controles" type="button" id="changeAlg_Button" onclick="changeAlgorithm()">Change Algo</button>
+                <button class="boton_controles" type="button" id="nextStep_Button" onclick="nextStep()">Next Step</button>
                 <button class="boton_controles" type="button" id="reset_Button" onclick="resetAll()">Reset</button>
-                <button class="boton_controles" type="button" id="changeWBlank_Button" onclick="changeWBlanck()">Intercambiar</button>
-                <input class="input_controles"  type="number" id="changeWBlank_Input" placeholder="n° pieza" pattern="[1-8]{1}">
+                <button class="boton_controles" type="button" id="changeWBlank_Button" onclick="changeWBlanck()">Swap</button>
+                <input class="input_controles"  type="number" id="changeWBlank_Input" placeholder="piece num" pattern="[1-8]{1}">
             </div>
             <a href="https://github.com/hros19/Automatized_8-Puzzle-Game">
                 <img alt="Github Repo" src="https://raw.githubusercontent.com/hros19/images/main/icons8-github-256.svg"
